--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ typings/                     # Tipos de TypeScript
 # Archivos de datos específicos del entorno
 mysql_data/                  # Datos de MySQL (si los tienes en el proyecto)
 .env
+docker-compose.yml
+docker-compose.yml
