--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
@@ -6,5 +7,5 @@ COPY . .
 RUN npm run build --configuration=production
 
 FROM nginx:alpine
-COPY --from=build /frontend/dist/frontend /usr/share/nginx/html
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
 EXPOSE 80
