Actualizacion de DockerFile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-
+# Etapa de construcción
 FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
@@ -6,6 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build --configuration=production
 
+# Etapa de producción (Nginx)
 FROM nginx:alpine
-COPY --from=build /app/dist/frontend /usr/share/nginx/html
+COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
 EXPOSE 80
